k8s/istio/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: custom-app-dr
spec:
  host: custom-app-service
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
    connectionPool:
      tcp:
        maxConnections: 3
      http:
        h2UpgradePolicy: DEFAULT
        http1MaxPendingRequests: 5
    tls:
      mode: ISTIO_MUTUAL
