k8s/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app-vs
spec:
  hosts:
  - "*"
  gateways:
  - app-gateway
  http:
  - match:
    - uri:
        exact: /log
      method:
        exact: POST
    route:
    - destination:
        host: custom-app-service
        port:
          number: 80
    fault:
      delay:
        percentage:
          value: 100
        fixedDelay: 2s
    timeout: 1s
    retries:
      attempts: 2
      perTryTimeout: 1s
      retryOn: 5xx
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: custom-app-service
        port:
          number: 80
  - match:
    - uri:
        exact: /status
    route:
    - destination:
        host: custom-app-service
        port:
          number: 80
  - match:
    - uri:
        exact: /logs
    route:
    - destination:
        host: custom-app-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /
    directResponse:
      status: 404
      body:
        string: "not found"
